2016-06-30  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add support for MKL library (USE_MKL=[dynamic|static])

2016-06-24  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix a bug related to flipping to minor alleles

2016-05-16  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Optimize code (faster speed, smaller memory consumptions)

2016-05-04  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Reduce memory consumption for logistic regression
	* Clean codes

2016-04-22  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix crash when analyzing large samples (>80,000)
	* Add experimental multiple trait analysis
	* Add richer outputs for --meta score model e.g. SE(beta)
	* Add estimates for residual model (pheno~covar) in --meta score model
	* Clean codes (refactoring codes in the large-scale)
	* Update third-party libraries

2015-12-01  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix a bug in meta covariance file (happens only when: unrelated individuals, has covariates, residual variance not one)
	* Improve single variant score test (--single score)
	* Add (optionally) SE for score test in meta-analysis models (e.g. --meta score[se])
	* Clean codes

2015-11-18  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add analytic SKAT-O model
	* Clean codes

2015-11-10  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve kinship calculation (--kinshipEigen)
	* Improve dosage supports for both autosomes and X chromosomes
	* Improve logistic regression speed in meta analysis
	* Add allelic Fisher's exact test
	* Add NumPolyVar in gene/set based tests
	* Add pre-regression checkings
	* Avoid SegFault when the data files are inaccessible
	* Clean codes

2015-10-07  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Fix a bug when generating covariance matrix

2015-09-02  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve stability of logistic regression model