@@ -1,3 +1,8 @@
+2016-09-28  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>
+
+	* Add a new fast meta-analysis models (--meta bolt[genotypeFile=XXX])
+	* Update third libraries
+
 2016-06-30  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>
 
 	* Add support for MKL library (USE_MKL=[dynamic|static])
